--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "connect-mongo": "^0.4.1",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
-    "socketio-jwt": "^2.0.2"
+    "socketio-jwt": "^2.0.2",
+    "email-templates": "=0.0.5",
+    "nodemailer": "=0.7.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
