--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-jshint": "~0.10.0",
@@ -84,7 +84,8 @@
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "should": "~3.3.1",
+    "grunt-shell": "^1.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
